/*
 * Copyright The Dongting Project
 *
 * The Dongting Project licenses this file to you under the Apache License,
 * version 2.0 (the "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at:
 *
 *   https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto3";
option java_package = "com.github.dtprj.dongting.codec";
message Packet {
  int32 packet_type = 1;
  int32 command = 2;
  fixed32 seq = 3;
  int32 resp_code = 4;
  int32 biz_code = 5;
  string resp_msg = 6;
  fixed64 timeout = 7;
  bytes extra = 8;
  bytes body = 15;
}

message Handshake {
  fixed64 magic1 = 1;
  fixed64 magic2 = 2;
  int32 major_version = 3;
  int32 minor_version = 4;
  ProcessInfo process_info = 5;
  DtAuth dt_auth = 6;
  UserAuth user_auth = 7;
  Config config = 8;
}

message ProcessInfo {
  fixed64 uuid1 = 1;
  fixed64 uuid2 = 2;
}

message DtAuth {
  // reserved for build-in authentication
}

message UserAuth {
  // reserved for user custom authentication
}

message Config {
  int32 max_packet_size = 1;
  int32 max_body_size = 2;
  int32 max_in_pending = 3;
  int64 max_in_pending_bytes = 4;
  int32 max_out_pending = 5;
  int64 max_out_pending_bytes = 6;
}
